{
  "version": 4,
  "terraform_version": "1.15.8",
  "serial": 10,
  "lineage": "2c2c50ad-2205-ca74-be27-d45cd7b74b21",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:614332045493:vpc/vpc-084507d007fcedba8",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-07aeff46aed77789d",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-012184d2d013aeff9",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-084507d007fcedba8",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f65e49766a52dc40",
            "owner_id": "614332045493",
            "region": "us-east-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-052355af2a014bd2c",
            "arn": "arn:aws:ec2:us-east-1:614332045493:instance/i-0b42d5c057bc1cbe7",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b42d5c057bc1cbe7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "stg-terra-auto-server-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-007d9cc47c2ea2536"
              }
            ],
            "primary_network_interface_id": "eni-007d9cc47c2ea2536",
            "private_dns": "ip-172-31-14-251.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.14.251",
            "public_dns": "ec2-3-236-183-93.compute-1.amazonaws.com",
            "public_ip": "3.236.183.93",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-05a8850d5870643b6",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "stg-terra_auto_sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fd5978a67c15be70",
            "tags": {
              "Environment": "stg",
              "Name": "stg-terra-auto-server"
            },
            "tags_all": {
              "Environment": "stg",
              "Name": "stg-terra-auto-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b5781d17fb974a98"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "614332045493",
            "id": "i-0b42d5c057bc1cbe7",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.ec2.aws_key_pair.my_key_pair",
            "module.ec2.aws_security_group.my_ec2_sg",
            "module.ec2.data.aws_ami.ubuntu_ami",
            "module.ec2.data.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-052355af2a014bd2c",
            "arn": "arn:aws:ec2:us-east-1:614332045493:instance/i-0f89a9937e11aba2e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f89a9937e11aba2e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "stg-terra-auto-server-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-049cd33f0cc05dcfd"
              }
            ],
            "primary_network_interface_id": "eni-049cd33f0cc05dcfd",
            "private_dns": "ip-172-31-11-123.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.11.123",
            "public_dns": "ec2-13-223-187-161.compute-1.amazonaws.com",
            "public_ip": "13.223.187.161",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-074d0d9b3ce02b160",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "stg-terra_auto_sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fd5978a67c15be70",
            "tags": {
              "Environment": "stg",
              "Name": "stg-terra-auto-server"
            },
            "tags_all": {
              "Environment": "stg",
              "Name": "stg-terra-auto-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b5781d17fb974a98"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "614332045493",
            "id": "i-0f89a9937e11aba2e",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.ec2.aws_key_pair.my_key_pair",
            "module.ec2.aws_security_group.my_ec2_sg",
            "module.ec2.data.aws_ami.ubuntu_ami",
            "module.ec2.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:614332045493:security-group/sg-0b5781d17fb974a98",
            "description": "Security group for EC2 instance",
            "egress": [],
            "id": "sg-0b5781d17fb974a98",
            "ingress": [],
            "name": "stg-terra_auto_sg",
            "name_prefix": "",
            "owner_id": "614332045493",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-084507d007fcedba8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "614332045493",
            "id": "sg-0b5781d17fb974a98",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.ec2.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:614332045493:security-group-rule/sgr-0516cd2eb3e6b95f1",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0516cd2eb3e6b95f1",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0b5781d17fb974a98",
            "security_group_rule_id": "sgr-0516cd2eb3e6b95f1",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "614332045493",
            "id": "sgr-0516cd2eb3e6b95f1",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.ec2.aws_security_group.my_ec2_sg",
            "module.ec2.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:614332045493:security-group-rule/sgr-09ddaeeb49b3dd74f",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow HTTP access",
            "from_port": 80,
            "id": "sgr-09ddaeeb49b3dd74f",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0b5781d17fb974a98",
            "security_group_rule_id": "sgr-09ddaeeb49b3dd74f",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "614332045493",
            "id": "sgr-09ddaeeb49b3dd74f",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.ec2.aws_security_group.my_ec2_sg",
            "module.ec2.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:614332045493:security-group-rule/sgr-058268ab5837ba8b4",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow SSH access",
            "from_port": 22,
            "id": "sgr-058268ab5837ba8b4",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0b5781d17fb974a98",
            "security_group_rule_id": "sgr-058268ab5837ba8b4",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "614332045493",
            "id": "sgr-058268ab5837ba8b4",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.ec2.aws_security_group.my_ec2_sg",
            "module.ec2.data.aws_vpc.default"
          ]
        }
      ]
    }
  ]
}